kubernetes/apps/default/plex/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: plex
  name: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      #  securityContext:
      #  fsGroup: 1000
      #  runAsUser: 1000
      #  runAsGroup: 1000
      containers:
        - image: linuxserver/plex:1.42.2
          name: plex
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 2000m
              memory: 4Gi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /tv
              name: tv
            - mountPath: /movies
              name: movies
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: tv
          persistentVolumeClaim:
            claimName: plex-tv-pvc
        - name: movies
          persistentVolumeClaim:
            claimName: plex-movies-pvc
