kubernetes/apps/default/plex/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  type: ClusterIP
  selector:
    app: plex
  ports:
    - port: 32400
      targetPort: 32400
