kubernetes/apps/default/plex/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    # Optional: force redirect https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
      - plex.heroaero.dev
      secretName: plex-tls 
  rules:
    - host: plex.heroaero.dev
      http:
        paths:
          - backend:
              service:
                name: plex
                port:
                  number: 32400
            path: /
            pathType: Prefix
